--- a/File System Permissions Weakness.html
+++ b/File System Permissions Weakness.html
@@ -1,32 +1,49 @@
+<ac:layout>
+<ac:layout-section ac:type="two_right_sidebar">
+<ac:layout-cell>
 <div id="main-content" class="wiki-content">
                            
   <div class="contentLayout2">
 <div class="columnLayout two-right-sidebar" data-layout="two-right-sidebar">
 <div class="cell normal" data-type="normal">
 <div class="innerCell">
-<p></p><h2 id="WindowsRemoteManagement-MitreRecommendations"><strong>Mitre Recommendations</strong></h2><div class="table-wrap"><table class="wrapped confluenceTable"><colgroup><col><col></colgroup><tbody><tr><td class="confluenceTd">Mitigation</td><td class="confluenceTd"><p></p></td></tr><tr><td class="confluenceTd"><p>Detection</p></td><td class="confluenceTd"><p style="text-align: left;"></p></td></tr></tbody></table></div></div>
+<p></p><h2 id="MitreRecommendations"><strong>Mitre Recommendations</strong></h2><div class="table-wrap"><table class="wrapped confluenceTable"><colgroup><col><col></colgroup><tbody><tr><td class="confluenceTd">Mitigation</td><td class="confluenceTd"><p></p></td></tr><tr><td class="confluenceTd"><p>Detection</p></td><td class="confluenceTd"><p style="text-align: left;"></p></td></tr></tbody></table></div></div>
 </div>
+</ac:layout-cell>
+<ac:layout-cell>
 <div class="cell aside" data-type="aside">
 <div class="innerCell">
-<h1 style="text-align: left;" id="WindowsRemoteManagement-SCORE:#/5"><strong>SCORE: #/5</strong></h1><p><br><p><br></p></div>
+<h1 style="text-align: left;" id="SCORE:#/5"><strong>SCORE: #/5</strong></h1><p><br><p><br></p></div>
 </div>
 </div>
+</ac:layout-cell>
+</ac:layout-selection>
+<ac:layout-section ac:type="single">
+<ac:layout-cell>
 <div class="columnLayout single" data-layout="single">
 <div class="cell normal" data-type="normal">
 <div class="innerCell">
-<h1 style="text-align: center;" id="WindowsRemoteManagement-VISA"><em style="letter-spacing: -0.01em;"><strong>VISA</strong></em></h1><hr><p><br></p></div>
+<h1 style="text-align: center;" id="VISA"><em style="letter-spacing: -0.01em;"><strong>VISA</strong></em></h1><hr><p><br></p></div>
 </div>
 </div>
+</ac:layout-cell>
+</ac:layout-section>
+<ac:layout-section ac:type="two_equal">
+<ac:layout-cell>
 <div class="columnLayout two-equal" data-layout="two-equal">
 <div class="cell normal" data-type="normal">
 <div class="innerCell">
-<h2 id="WindowsRemoteManagement-Mitigation"><strong>Mitigation&nbsp;</strong></h2><p></p><p><br></p></div>
+<h2 id="Mitigation"><strong>Mitigation&nbsp;</strong></h2><p></p><p><br></p></div>
 </div>
+</ac:layout-cell>
+<ac:layout-cell>
 <div class="cell normal" data-type="normal">
 <div class="innerCell">
-<h2 id="WindowsRemoteManagement-Detection"><strong>Detection</strong></h2><p></li></ul></div>
+<h2 id="Detection"><strong>Detection</strong></h2><p></li></ul></div>
 </div>
 </div>
+</ac:layout-cell>
+<ac:layout-section ac:type="single">
 <div class="columnLayout single" data-layout="single">
 <div class="cell normal" data-type="normal">
 <div class="innerCell">
@@ -41,3 +58,6 @@
   
 
   </div>
+ </ac:layout-cell>
+ </ac:layout-section>
+ </ac:layout>
