--- a/example.html
+++ b/example.html
@@ -7,7 +7,19 @@
       <div class="cell normal" data-type="normal">
        <div class="innerCell">
         <p>
-         Windows Remote Management (WinRM) is the name of both a Windows service and a protocol that allows a user to interact with a remote system (e.g., run an executable, modify the Registry, modify services).  It may be called with the winrm command or by any number of programs such as PowerShell.
+         Processes may automatically execute specific binaries as part of their functionality or to perform other actions. If the permissions on the file system directory containing a target binary, or permissions on the binary itself, are improperly set, then the target binary may be overwritten with another binary using user-level permissions and executed by the original process. If the original process and thread are running under a higher permissions level, then the replaced binary will also execute under higher-level permissions, which could include SYSTEM. Adversaries may use this technique to replace legitimate binaries with malicious ones as a means of executing code at a higher permissions level. If the executing process is set to run at a specific time or during a certain event (e.g., system bootup) then this technique can also be used for persistence.
+        </p>
+        <h3>
+         Executable Installers
+        </h3>
+        <p>
+         Another variation of this technique can be performed by taking advantage of a weakness that is common in executable, self-extracting installers. During the installation process, it is common for installers to use a subdirectory within the %TEMP% directory to unpack binaries such as DLLs, EXEs, or other payloads. When installers create subdirectories and files they often do not set appropriate permissions to restrict write access, which allows for execution of untrusted code placed in the subdirectories or overwriting of binaries used in the installation process. This behavior is related to and may take advantage of DLL Search Order Hijacking. Some installers may also require elevated privileges that will result in privilege escalation when executing adversary controlled code. This behavior is related to Bypass User Account Control. Several examples of this weakness in existing common installers have been reported to software vendors.
+        </p>
+        <h3>
+         Services
+        </h3>
+        <p>
+         Manipulation of Windows service binaries is one variation of this technique. Adversaries may replace a legitimate service executable with their own executable to gain persistence and/or privilege escalation to the account context the service is set to execute under (local/domain account, SYSTEM, LocalService, or NetworkService). Once the service is started, either directly by the user (if appropriate access is available) or through some other means, such as a system restart if the service starts on bootup, the replaced executable will run instead of the original service executable.
         </p>
         <h2 id="MitreRecommendations">
          <strong>
@@ -27,7 +39,7 @@
             </td>
             <td class="confluenceTd">
              <p>
-              Disable the WinRM service. If the service is necessary, lock down critical enclaves with separate WinRM infrastructure, accounts, and permissions. Follow WinRM best practices on configuration of authentication methods and use of host firewalls to restrict WinRM access to allow communication only to/from specific devices.
+              Use auditing tools capable of detecting file system permissions abuse opportunities on systems within an enterprise and correct them. Limit privileges of user accounts and groups so that only authorized administrators can interact with service changes and service binary target path locations. Toolkits like the PowerSploit framework contain PowerUp modules that can be used to explore systems for service file system permissions weaknesses.
              </p>
             </td>
            </tr>
@@ -39,7 +51,7 @@
             </td>
             <td class="confluenceTd">
              <p style="text-align: left;">
-              Monitor use of WinRM within an environment by tracking service execution. If it is not normally used or is disabled, then this may be an indicator of suspicious behavior. Monitor processes created and actions taken by the WinRM process or a WinRM invoked script to correlate it with other related events.
+              Look for changes to binaries and service executables that may normally occur during software updates. If an executable is written, renamed, and/or moved to match an existing service executable, it could be detected and correlated with other suspicious behavior. Hashing of binaries and service executables could be used to detect replacement against historical data.
              </p>
             </td>
            </tr>
@@ -66,14 +78,14 @@
       </strong>
       :
       <a href="https://mitreattack.com/">
-       T1028
+       T1044
       </a>
      </p>
      <p>
       <strong>
        Tactic
       </strong>
-      : Execution, Lateral Movement
+      : Persistence, Privilege Escalation
      </p>
      <p>
       <strong>
@@ -83,27 +95,21 @@
      </p>
      <p>
       <strong>
-       System Requirements
+       Permissions Required
       </strong>
-      : WinRM listener turned on and configured on remote system
+      : Administrator, User
      </p>
      <p>
       <strong>
-       Permissions Required
+       Effective Permissions
       </strong>
-      : User, Administrator
+      : SYSTEM, User, Administrator
      </p>
      <p>
       <strong>
        Data Sources
       </strong>
-      : File monitoring, Authentication logs, Netflow/Enclave netflow, Process monitoring, Process command-line parameters
-     </p>
-     <p>
-      <strong>
-       Supports Remote
-      </strong>
-      : Yes
+      : File monitoring, Services, Process command-line parameters
      </p>
      <p>
       <br/>
