--- a/Windows Remote Management.html
+++ b/Windows Remote Management.html
@@ -1,29 +1,28 @@
 <ac:layout>
 <ac:layout-section ac:type="two_right_sidebar">
 <ac:layout-cell>
-<div id="main-content" class="wiki-content">
-                           
-  <div class="contentLayout2">
+<div class="wiki-content" id="main-content">
+<div class="contentLayout2">
 <div class="columnLayout two-right-sidebar" data-layout="two-right-sidebar">
 <div class="cell normal" data-type="normal">
 <div class="innerCell">
-<p></p><h2 id="MitreRecommendations"><strong>Mitre Recommendations</strong></h2><div class="table-wrap"><table class="wrapped confluenceTable"><colgroup><col><col></colgroup><tbody><tr><td class="confluenceTd">Mitigation</td><td class="confluenceTd"><p></p></td></tr><tr><td class="confluenceTd"><p>Detection</p></td><td class="confluenceTd"><p style="text-align: left;"></p></td></tr></tbody></table></div></div>
+<p>Windows Remote Management (WinRM) is the name of both a Windows service and a protocol that allows a user to interact with a remote system (e.g., run an executable, modify the Registry, modify services).  It may be called with the winrm command or by any number of programs such as PowerShell.  </p><h2 id="MitreRecommendations"><strong>Mitre Recommendations</strong></h2><div class="table-wrap"><table class="wrapped confluenceTable"><colgroup><col/><col/></colgroup><tbody><tr><td class="confluenceTd">Mitigation</td><td class="confluenceTd"><p>Disable the WinRM service. If the service is necessary, lock down critical enclaves with separate WinRM infrastructure, accounts, and permissions. Follow WinRM best practices on configuration of authentication methods and use of host firewalls to restrict WinRM access to allow communication only to/from specific devices. </p></td></tr><tr><td class="confluenceTd"><p>Detection</p></td><td class="confluenceTd"><p style="text-align: left;">Monitor use of WinRM within an environment by tracking service execution. If it is not normally used or is disabled, then this may be an indicator of suspicious behavior. Monitor processes created and actions taken by the WinRM process or a WinRM invoked script to correlate it with other related events.</p></td></tr></tbody></table></div></div>
 </div>
-</ac:layout-cell>
+</div></div></div></ac:layout-cell>
 <ac:layout-cell>
 <div class="cell aside" data-type="aside">
 <div class="innerCell">
-<h1 style="text-align: left;" id="SCORE:#/5"><strong>SCORE: #/5</strong></h1><p><br><p><br></p></div>
+<h1 id="SCORE:#/5" style="text-align: left;"><strong>SCORE: #/5</strong></h1><p><strong>ID</strong>: <a href="www.mitreattack.com">T1028</a></p><p><strong>Tactic</strong>: Execution, Lateral Movement</p><p><strong>Platform</strong>: Windows</p><p><strong>System Requirements</strong>: WinRM listener turned on and configured on remote system</p><p><strong>Permissions Required</strong>: User, Administrator</p><p><strong>Data Sources</strong>: File monitoring, Authentication logs, Netflow/Enclave netflow, Process monitoring, Process command-line parameters</p><p><strong>Supports Remote</strong>: Yes</p><p><br/><p><br/></p></p></div>
 </div>
-</div>
-</ac:layout-cell>
-</ac:layout-selection>
+</ac:layout-cell></ac:layout-section></ac:layout>
+
+
 <ac:layout-section ac:type="single">
 <ac:layout-cell>
 <div class="columnLayout single" data-layout="single">
 <div class="cell normal" data-type="normal">
 <div class="innerCell">
-<h1 style="text-align: center;" id="VISA"><em style="letter-spacing: -0.01em;"><strong>VISA</strong></em></h1><hr><p><br></p></div>
+<h1 id="VISA" style="text-align: center;"><em style="letter-spacing: -0.01em;"><strong>VISA</strong></em></h1><hr/><p><br/></p></div>
 </div>
 </div>
 </ac:layout-cell>
@@ -33,31 +32,26 @@
 <div class="columnLayout two-equal" data-layout="two-equal">
 <div class="cell normal" data-type="normal">
 <div class="innerCell">
-<h2 id="Mitigation"><strong>Mitigation&nbsp;</strong></h2><p></p><p><br></p></div>
+<h2 id="Mitigation"><strong>Mitigation </strong></h2><p></p><p><br/></p></div>
 </div>
-</ac:layout-cell>
+</div></ac:layout-cell>
 <ac:layout-cell>
 <div class="cell normal" data-type="normal">
 <div class="innerCell">
-<h2 id="Detection"><strong>Detection</strong></h2><p></li></ul></div>
-</div>
-</div>
-</ac:layout-cell>
+<h2 id="Detection"><strong>Detection</strong></h2><p></p></div></div></ac:layout-cell></ac:layout-section>
+
+
+
 <ac:layout-section ac:type="single">
 <div class="columnLayout single" data-layout="single">
 <div class="cell normal" data-type="normal">
 <div class="innerCell">
-<p><br></p><p>
-
-<p></p></div>
+<p><br/></p><p>
+<p></p></p></div>
 </div>
 </div>
-</div>
+</ac:layout-section>
 
-          
-  
 
-  </div>
- </ac:layout-cell>
- </ac:layout-section>
- </ac:layout>
+
+
