--- a/File System Permissions Weakness.html
+++ b/File System Permissions Weakness.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <ac:layout>
 <ac:layout-section ac:type="two_right_sidebar">
 <ac:layout-cell>
@@ -15,7 +14,7 @@
 <div class="innerCell">
 <h1 id="SCORE:#/5" style="text-align: left;"><strong>SCORE: #/5</strong></h1><p><strong>ID</strong>: <a href="www.mitreattack.com">T1044</a></p><p><strong>Tactic</strong>: Persistence, Privilege Escalation</p><p><strong>Platform</strong>: Windows</p><p><strong>Permissions Required</strong>: Administrator, User</p><p><strong>Effective Permissions</strong>: SYSTEM, User, Administrator</p><p><strong>Data Sources</strong>: File monitoring, Services, Process command-line parameters</p><p><br/><p><br/></p></p></div>
 </div>
-</ac:layout-cell></ac:layout-section></ac:layout>
+</ac:layout-cell></ac:layout-section>
 
 
 <ac:layout-section ac:type="single">
@@ -56,68 +55,4 @@
 
 
 
-=======
-<ac:layout>
-<ac:layout-section ac:type="two_right_sidebar">
-<ac:layout-cell>
-<div id="main-content" class="wiki-content">
-                           
-  <div class="contentLayout2">
-<div class="columnLayout two-right-sidebar" data-layout="two-right-sidebar">
-<div class="cell normal" data-type="normal">
-<div class="innerCell">
-<p></p><h2 id="MitreRecommendations"><strong>Mitre Recommendations</strong></h2><div class="table-wrap"><table class="wrapped confluenceTable"><colgroup><col><col></colgroup><tbody><tr><td class="confluenceTd">Mitigation</td><td class="confluenceTd"><p></p></td></tr><tr><td class="confluenceTd"><p>Detection</p></td><td class="confluenceTd"><p style="text-align: left;"></p></td></tr></tbody></table></div></div>
-</div>
-</ac:layout-cell>
-<ac:layout-cell>
-<div class="cell aside" data-type="aside">
-<div class="innerCell">
-<h1 style="text-align: left;" id="SCORE:#/5"><strong>SCORE: #/5</strong></h1><p><br><p><br></p></div>
-</div>
-</div>
-</ac:layout-cell>
-</ac:layout-selection>
-<ac:layout-section ac:type="single">
-<ac:layout-cell>
-<div class="columnLayout single" data-layout="single">
-<div class="cell normal" data-type="normal">
-<div class="innerCell">
-<h1 style="text-align: center;" id="VISA"><em style="letter-spacing: -0.01em;"><strong>VISA</strong></em></h1><hr><p><br></p></div>
-</div>
-</div>
-</ac:layout-cell>
-</ac:layout-section>
-<ac:layout-section ac:type="two_equal">
-<ac:layout-cell>
-<div class="columnLayout two-equal" data-layout="two-equal">
-<div class="cell normal" data-type="normal">
-<div class="innerCell">
-<h2 id="Mitigation"><strong>Mitigation&nbsp;</strong></h2><p></p><p><br></p></div>
-</div>
-</ac:layout-cell>
-<ac:layout-cell>
-<div class="cell normal" data-type="normal">
-<div class="innerCell">
-<h2 id="Detection"><strong>Detection</strong></h2><p></li></ul></div>
-</div>
-</div>
-</ac:layout-cell>
-<ac:layout-section ac:type="single">
-<div class="columnLayout single" data-layout="single">
-<div class="cell normal" data-type="normal">
-<div class="innerCell">
-<p><br></p><p>
-
-<p></p></div>
-</div>
-</div>
-</div>
-
-          
-  
-
-  </div>
- </ac:layout-cell>
- </ac:layout-section>
- </ac:layout>
->>>>>>> 51f5212b17b02694ccbff8aaafcebf6617177568
+</ac:layout>
