--- a/Windows Remote Management.html
+++ b/Windows Remote Management.html
@@ -14,7 +14,7 @@
 <div class="innerCell">
 <h1 id="SCORE:#/5" style="text-align: left;"><strong>SCORE: #/5</strong></h1><p><strong>ID</strong>: <a href="www.mitreattack.com">T1028</a></p><p><strong>Tactic</strong>: Execution, Lateral Movement</p><p><strong>Platform</strong>: Windows</p><p><strong>System Requirements</strong>: WinRM listener turned on and configured on remote system</p><p><strong>Permissions Required</strong>: User, Administrator</p><p><strong>Data Sources</strong>: File monitoring, Authentication logs, Netflow/Enclave netflow, Process monitoring, Process command-line parameters</p><p><strong>Supports Remote</strong>: Yes</p><p><br/><p><br/></p></p></div>
 </div>
-</ac:layout-cell></ac:layout-section></ac:layout>
+</ac:layout-cell></ac:layout-section>
 
 
 <ac:layout-section ac:type="single">
@@ -55,3 +55,4 @@
 
 
 
+</ac:layout>
